k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:alpine
        ports:
        - containerPort: 5432
        # כאן הוספנו: חיבור התיקייה בתוך הקונטיינר ל"כונן"
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql
      # כאן הוספנו: הגדרת ה"כונן" (Volume) שמבוסס על ה-PVC
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 5432
  selector:
    app: db
